Allow the use of the ORIGIN and LENGTH attributes in expressions inside MEMORY regions.

PR 24289
	* ldexp.c (fold_name): Allow lookups of the LENGTH and ORIGIN
	attributes during the first phase.